# kalman-filter

./: CMakeLists.txt  README.md
example/: kalman_filter_example.ipynb
include/: kalman_filter.h  kalman_filter_impl.h  matrix.h  motion_model.h
protocol/: CMakeLists.txt
protocol/kalman/data/: data.proto  motion_model.proto
protocol/kalman/services/: kalman_filter.proto
protocol/kalman_filter/data/: data.proto  motion_model.proto
protocol/kalman_filter/services/: kalman_filter.proto
python/: create_package.py  setup.py
src/: CMakeLists.txt  kalman_filter.cpp  kalman_filter_example.cpp  kalman_filter_impl.cpp  kalman_filter_main.cpp  kalman_filter_server.cpp  motion_model.cpp
